Fixed Alignment Issue in Information Section

--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ a:visited {
   font-weight: 400;
 }
 .informationp {
-  margin-top: 27px;
+  margin-top: 40px;
   color: #8a8683;
 }
 #informationdata {
@@ -386,33 +386,34 @@ a:visited {
 h1.sideh1 {
   position: absolute;
   left: -40px;
-  top: -2px;
+  top: 12px;
 }
 h1.sideh12 {
   position: absolute;
   left: -40px;
-  top: 310px;
+  top: 332px;
 }
 h1.sideh13 {
   position: absolute;
   left: -40px;
-  top: 70px;
+  top: 71px;
 }
 h1.sideh14 {
   position: absolute;
   left: -40px;
-  top: 140px;
+  top: 148px;
 }
 h1.sideh15 {
   position: absolute;
   left: -40px;
-  top: 370px;
+  top: 390px;
 }
 h1.sideh16 {
   position: absolute;
   left: -40px;
-  top: 440px;
+  top: 448px;
 }
+
 div.center iframe {
   display: block !important;
   margin-left: auto !important;
